// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login 1`] = `
Object {
  "email": "jgrimes@example.com",
  "emailVerified": false,
  "firstName": "Julian",
  "id": 1,
  "lastName": "Grimes",
}
`;

exports[`login email required validation 1`] = `
Object {
  "feedback": Object {
    "email": Array [
      "A valid email is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`login password required validation 1`] = `
Object {
  "feedback": Object {
    "password": Array [
      "A valid password is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`login with invalid credentials 1`] = `
Object {
  "message": "Incorrect email or password",
}
`;
